--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -26,22 +26,22 @@
                     </a>
                 </li>
 
-                <li class="nav-item ">
-                    <a class="nav-link" href="./tables.html">
+                <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact : true}">
+                    <a class="nav-link" routerLink="employee">
                         <i class="material-icons">content_paste</i>
-                        <p>Table List</p>
+                        <p>Employé</p>
                     </a>
                 </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="./typography.html">
+                <li class="nav-item " routerLinkActive="active" [routerLinkActiveOptions]="{exact : true}">
+                    <a class="nav-link" routerLink="suppliers">
                         <i class="material-icons">library_books</i>
-                        <p>Typography</p>
+                        <p>Fournisseur</p>
                     </a>
                 </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="./icons.html">
+                <li class="nav-item " routerLinkActive="active" [routerLinkActiveOptions]="{exact : true}">
+                    <a class="nav-link" routerLink="products">
                         <i class="material-icons">bubble_chart</i>
-                        <p>Icons</p>
+                        <p>Produits</p>
                     </a>
                 </li>
                 <li class="nav-item ">
